--- a/viewer.html
+++ b/viewer.html
@@ -48,6 +48,13 @@
         };
       }
 
+      constructor() {
+        this.stateController = new DistributedStateController();
+      }
+      connectedCallback() {
+        super.connectedCallback();
+        this.stateController.initialize(this, this.data);
+      }
       refresh() {
         this.$.red.style.opacity = 0.2;
         this.$.yellow.style.opacity = 0.2;
@@ -58,26 +65,34 @@
         this.$[this.data.color].style.opacity = 1;
         this.$[this.data.color].style.transform = "scale(1.3)";
       }
-
       onR() {
         this.onColor("red");
       }
-
       onY() {
         this.onColor("yellow");
       }
-
       onG() {
         this.onColor("green");
       }
-
       onColor(color) {
-        this.set("data", { color: color });
-        this.channel.sendCardToCardMessage(this, { json: { color: color } }, false, false);
+        this.stateController.updateProperty('color', color);
+        // this.set("data", { color: color });
+        // this.channel.sendCardToCardMessage(this, { json: { color: color } }, false, false);
       }
-
       handleCardToCardMessageReceived(participant, message) {
-        this.set("data", message.json.details.data);
+        switch (message.json.type) {
+          case 'mutation':
+            this.stateController.handleInboundMutation(message.json.details, message);
+            break;
+          default:
+            break;
+        }
+      }
+      sendMutation(mutation) {
+        return this.channel.sendCardToCardMessage(this, { json: { type: "mutation", details: mutation } }, true, false);
+      }
+      setProperty(path, value) {
+        this.set('data.' + path, value);
       }
     }
     window.customElements.define(TrafficLightzView.is, TrafficLightzView);
