--- a/viewer.html
+++ b/viewer.html
@@ -35,6 +35,7 @@
       <div id="green" class="light" on-click="onG"></div>
     </div>
   </template>
+  <script src="../distributed-state-controller/bin/src/index.js"></script>
   <script>
     class TrafficLightzView extends Polymer.Element {
       static get is() { return 'traffic-lightz-view'; }
